--- a/public/partials/user.html
+++ b/public/partials/user.html
@@ -1,4 +1,3 @@
-<!-- navbar -->
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
@@ -124,18 +123,19 @@
             </select>
           </span>
         </td>
-        <td ng-click="showEdit($event, p)">
+        <td>{{p.company.name}}</td>
+        <!--  <td ng-click="showEdit($event, p)">
           <span class="view">{{p.company.name}}</span>
           <span class="edit" style="display:none;">
             <select class="form-control" ng-model="p.company" ng-options="c as c.name for c in companies">
             </select>
-            <!-- <input type="text" class="form-control" ng-model="p.company" ng-blur="update($event, p, 'company')"> -->
           </span>
-        </td>
+        </td> -->
         <td ng-click="showEdit($event, p)">
           <span class="view">{{p.sales.name}}</span>
           <span class="edit" style="display:none;">
-            <select class="form-control" ng-model="p.sales" ng-options="s as s.name for s in saleses"></select>
+            <typeahead name="sales" value-key="name" remote="/api/sales?s=%QUERY" model="p.sales.name" datum="p.sales" ng-blur="update($event, p, 'sales')"></typeahead>
+            <!-- <select class="form-control" ng-model="p.sales" ng-options="s as s.name for s in saleses" ng-blur="update($event, p, 'sales')"></select> -->
             <!-- <input type="text" class="form-control" ng-model="p.sales" ng-blur="update($event, p, 'sales')"> -->
           </span>
         </td>
@@ -192,12 +192,13 @@
                     <input type="number" class="form-control" ng-model="p.price" ng-blur="update($event, p, 'price')">
                   </span>
                 </td>
-                <td ng-click="showEdit($event, p)">
+                <td>{{p.area.name}}</td>
+                <!-- <td ng-click="showEdit($event, p)">
                   <span class="view">{{p.area.name}}</span>
                   <span class="edit" style="display:none;">
                     <select class="form-control" ng-model="p.area" ng-options="a as a.name for a in areas" ng-blur="update($event, p, 'area')"></select>
                   </span>
-                </td>
+                </td> -->
                 <!--  <td ng-click="showEdit($event, p)">
                   <span class="view">{{p.company.manager.name}}</span>
                   <span class="edit" style="display:none;">
@@ -348,7 +349,7 @@
               </select>
             </div>
           </div>
-          <div class="form-group">
+          <!--  <div class="form-group">
             <label class="control-label col-sm-2">区域</label>
             <div class="col-sm-10">
               <select class="form-control" ng-model="newProject.area" ng-options="a as a.name for a in areas">
@@ -361,7 +362,7 @@
               <select class="form-control" ng-model="newProject.company" ng-options="c as c.name for c in companies">
               </select>
             </div>
-          </div>
+          </div> -->
           <div class="form-group">
             <label class="control-label col-sm-2">销售</label>
             <div class="col-sm-10">
@@ -516,4 +517,4 @@
   <!-- /.modal-dialog -->
 </div>
 <!-- /.modal -->
-<!-- end comment modal -->
+<!-- end comment modal
